Bug 118546 - CRASH: Writer crashes in print preview
Summary: CRASH: Writer crashes in print preview
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
6.2.0.0.alpha0+
Hardware: All All
: highest critical
Assignee: Mike Kaganski
URL:
Whiteboard: target:6.2.0
Keywords: bibisected, bisected, regression
Depends on:
Blocks:
 
Reported: 2018-07-05 10:47 UTC by Xisco Faulí
Modified: 2018-07-07 12:52 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Xisco Faulí 2018-07-05 10:47:56 UTC
Steps to reproduce:
1. Open Writer
2. Click on Print preview

Reproduced in

Version: 6.2.0.0.alpha0+
Build ID: 0e83efbccc180c957f77291fc0fdc6dd74eae0f4
CPU threads: 4; OS: Linux 4.13; UI render: default; VCL: gtk3; 
Locale: ca-ES (ca_ES.UTF-8); Calc: group threaded
Comment 1 Xisco Faulí 2018-07-05 10:49:28 UTC
Regression introduced by:

author	Kshitij Pathania <kshitijpathania@gmail.com>	2018-07-02 18:48:19 +0530
committer	Szymon Kłos <szymon.klos@collabora.com>	2018-07-04 12:46:01 +0200
commit d05b7b32d9ecb6fcb4a268eb68cdcee09bafa6dd (patch)
tree c82f797131cfbdfd8933daad0fea249b50c49ad6
parent ea39c41fdf63191579d25f327db81db14862251c (diff)
Notebookbar:Context for printpreview is now working
Also the context stuff is now working well even
after print preview is set

Bisected with: bibisect-linux64-6.2

Adding Cc: to Kshitij Pathania
Comment 2 Mike Kaganski 2018-07-05 12:04:37 UTC
https://gerrit.libreoffice.org/57006
Comment 3 Commit Notification 2018-07-05 15:05:03 UTC
Mike Kaganski committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=8a20bf4a7df90d789753026c1e5b1b6fcf319d6c

tdf#118546: GetNotebookBar() may return nullptr

It will be available in 6.2.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 4 Xisco Faulí 2018-07-07 11:48:12 UTC
Verified in

Version: 6.2.0.0.alpha0+
Build ID: 363146254bd44ab82d657f2ca0293d03bd111280
CPU threads: 4; OS: Linux 4.13; UI render: default; VCL: gtk3; 
Locale: ca-ES (ca_ES.UTF-8); Calc: group threaded

@Mike, Thanks for fixing this!! should it be closed as RESOLVED FIXED?
Comment 5 Mike Kaganski 2018-07-07 12:10:21 UTC
(In reply to Xisco Faulí from comment #4)

Yes, sorry - forgot that