Notebookbar:Context for printpreview is working.

This is a combination of 3 commits.
Notebookbar:Context for printpreview is now working

Also the context stuff is now working well even
after print preview is set

Change-Id: Ia43f512394cf4d162b4019257c039aecb664df22
Reviewed-on: https://gerrit.libreoffice.org/56740
Tested-by: Jenkins
Reviewed-by: Szymon Kłos <szymon.klos@collabora.com>

tdf#118546: GetNotebookBar() may return nullptr

Change-Id: I411ea0abcb5fd5fac0db7fe0c4bad16a0c1b9d77
Reviewed-on: https://gerrit.libreoffice.org/57006
Reviewed-by: Kshitij Pathania <kshitijpathania@gmail.com>
Tested-by: Jenkins
Reviewed-by: Szymon Kłos <szymon.klos@collabora.com>

Conserved the alphabetical order in contexts.

ThreeDObject is remained on top as its entry begin with 3.
All others are sorted now except the generalised ones in last.

Change-Id: Id56550da450f0d2a0dd770a78360d20ada90f048
Reviewed-on: https://gerrit.libreoffice.org/56984
Tested-by: Jenkins
Reviewed-by: Szymon Kłos <szymon.klos@collabora.com>